--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <nav>
       <ul>
         <li id="nav-1" class="slide-out-1"><a href="#home">Home</a></li>
-        <li id="nav-2" class="slide-out-2"><a href="#about">About Me</a></li>
-        <li id="nav-3" class="slide-out-3"><a href="#skills">My Skills</a></li>
-        <li id="nav-4" class="slide-out-4"><a href="#projects">My Projects</a></li>
+        <li id="nav-2" class="slide-out-2"><a href="#about">About</a></li>
+        <li id="nav-3" class="slide-out-3"><a href="#skills">Skills</a></li>
+        <li id="nav-4" class="slide-out-4"><a href="#projects">Projects</a></li>
         <li id="nav-5" class="slide-out-5"><a href="#contact">Contact</a></li>
       </ul>
     </nav>
@@ -36,14 +36,14 @@
 
   <!-- Home -->
 
-  <section id="home"><a href="#home">borrega.io</a>
+  <section id="home"><a href="#home" class="logo">borrega.io</a>
 
     <div class="title-main">
       <h1 data-aos="fade-up">
         Hey, I'm Carlos
       </h1>
       <h2 data-aos="fade-up" data-aos-delay="600">
-        I'm a Full-Stack Web Developer based in London
+        I'm a JavaScript Web Developer based in London
       </h2>
     </div>
 
@@ -54,25 +54,38 @@
 
   <section id="about">
 
-    <img src="https://picsum.photos/id/1/500/720" alt="profile">
+    <img data-aos="flip-left" src="images/profile.jpg" alt="profile">
 
     <div class="profile-description">
 
-      <h1 class="section-title">Hello! I'm Carlos</h1>
+      <h1 class="section-title">Welcome to my portfolio!</h1>
 
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti sit nemo numquam iste dolorem exercitationem
-        rem dolor maiores, nesciunt quae tenetur hic eaque, quas perferendis laboriosam assumenda? Impedit, ex labore.
-        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Asperiores quas sit et enim tempore laborum distinctio
-        alias dicta reiciendis ratione similique in nulla commodi quis deleniti modi, odit unde ex.
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni odit sunt aliquam mollitia earum harum animi
-        dolorem. Quasi quo tempore saepe magni ex cupiditate ipsum dolorem nemo, aliquid aspernatur atque!
+        I'm a self-taught JavaScript web developer who is constantly seeking new knowledge and growth. I am
+        deeply passionate about my work and embrace challenges with enthusiasm. Pushing my limits and dedicating myself
+        to hard work are where I truly excel.
+      </p>
+      <p>
+        Prior to my journey into web development, I gained valuable experience in the retail sector as a manager and
+        visual merchandiser. This role honed my problem-solving abilities, taught me to adapt quickly, and highlighted
+        the power of teamwork.
+      </p>
+      <p>
+        My current skill set encompasses HTML, CSS, JavaScript, NodeJS, and MongoDB. Additionally, I am eagerly
+        immersing myself in learning React to elevate my expertise to the next level.
+      </p>
+      <p>
+        My ultimate ambition is to join an exceptional team where collaboration reigns and together we can create
+        awe-inspiring projects.
+      </p>
+      <p>
+        If you would like to learn more about my past work experiences, please feel free to download my resume from the
+        link below. Thank you for visiting my portfolio, and I look forward to the possibility of working together in
+        the future!
       </p>
 
-      <div>
-        <a class="link resume" href="docs/Resume.pdf" download="Resume.pdf">Download My
-          Résumé</a>
-      </div>
+      <a class="link resume" href="docs/Resume.pdf" download="Resume.pdf">Download My
+        Resume</a>
 
     </div>
 
@@ -86,30 +99,30 @@
     <h1 class="section-title">My Skills</h1>
 
     <ul class="skills-list">
-      <li>
+      <li data-aos="fade-left">
         HTML
       </li>
-      <hr>
-      <li>
+      <hr data-aos="fade-right">
+      <li data-aos="fade-left">
         CSS
       </li>
-      <hr>
-      <li>
+      <hr data-aos="fade-right">
+      <li data-aos="fade-left">
         JavaScript
       </li>
-      <hr>
-      <li>
+      <hr data-aos="fade-right">
+      <li data-aos="fade-left">
         NodeJS
       </li>
-      <hr>
-      <li>
+      <hr data-aos="fade-right">
+      <li data-aos="fade-left">
         React
       </li>
-      <hr>
-      <li>
+      <hr data-aos="fade-right">
+      <li data-aos="fade-left">
         MongoDB
       </li>
-      <hr class="last-line">
+      <hr data-aos="fade-right" class="last-line">
     </ul>
 
   </section>
@@ -122,21 +135,17 @@
     <h1 class="section-title">My Projects</h1>
 
     <ul class="projects-list">
-      <li>
+      <li data-aos="fade-right">
         <span>01.</span>
-        <a href="project1.html">Project 1</a>
+        <a href="project1.html">Infodex</a>
       </li>
-      <li>
+      <li data-aos="fade-right">
         <span>02.</span>
-        <a href="project1.html">Project 2</a>
+        <a href="project1.html">Rock, Paper, Scissors</a>
       </li>
-      <li>
+      <li data-aos="fade-right">
         <span>03.</span>
-        <a href="project1.html">Project 3</a>
-      </li>
-      <li>
-        <span>04.</span>
-        <a href="project1.html">Project 4</a>
+        <a href="project1.html">Portfolio</a>
       </li>
     </ul>
 
@@ -160,13 +169,16 @@
       </p>
 
       <ul class="contact-list">
-        <li>
+        <li data-aos="fade-left">
+          <a class="link" href="docs/Resume.pdf" download="Resume.pdf">My Resume</a>
+        </li>
+        <li data-aos="fade-left">
           <a class="link" href="https://www.linkedin.com/in/carlosborrega/" target="_blank">LinkedIn</a>
         </li>
-        <li>
+        <li data-aos="fade-left">
           <a class="link" href="https://github.com/borregaio" target="_blank">GitHub</a>
         </li>
-        <li>
+        <li data-aos="fade-left">
           <a class="link" href="mailto:c.borrega@pm.me">c.borrega@pm.me</a>
         </li>
       </ul>
@@ -177,32 +189,10 @@
 
   <section id="footer">
 
-    <div class="footer-info">
-
-      <div class="footer-info-title">
-        <h2>Say Hello</h2>
-      </div>
-
-      <div>
-
-        <ul class="contact-list footer-list">
-          <li>
-            <a class="link" href="mailto:c.borrega@pm.me">My Email</a>
-          </li>
-          <li>
-            <a class="link" href="docs/Resume.pdf" download="Resume.pdf">My Résumé</a>
-          </li>
-        </ul>
-      </div>
-
-    </div>
-
     <div class="copyright">
-      <hr class="footer-line">
+      <hr>
       <h3>© Carlos Borrega 2023</h3>
     </div>
-
-
 
   </section>
 
@@ -210,10 +200,10 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init({
-      delay: 200, // values from 0 to 3000, with step 50ms
+      // delay: 200, // values from 0 to 3000, with step 50ms
       duration: 1500, // values from 0 to 3000, with step 50ms
-      once: false, // whether animation should happen only once - while scrolling down
-      mirror: false, // whether elements should animate out while scrolling past them
+      once: true, // whether animation should happen only once - while scrolling down
+      mirror: true, // whether elements should animate out while scrolling past them
     });
   </script>
   <script src="script.js"></script>
