--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
       duration: 1500, // values from 0 to 3000, with step 50ms
       once: true, // whether animation should happen only once - while scrolling down
       mirror: true, // whether elements should animate out while scrolling past them
+      disable: 'mobile'
     });
   </script>
   <script src="script.js"></script>
