added project pages

--- a/project2.html
+++ b/project2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infodex — Carlos Borrega</title>
+    <title>Rock, Paper, Scissors — Carlos Borrega</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="stylesheet" href="style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -35,14 +35,14 @@
     <section id="project"><a href="index.html" class="logo">borrega.io</a>
 
         <div class="project-info">
-            <img data-aos="flip-left" src="images/infodex.jpg" alt="Rock, paper, scissors game">
+            <img data-aos="flip-left" src="images/game.jpg" alt="Rock, paper, scissors game">
             <div data-aos="zoom-in" class="project-description">
-                <h1><span>01.</span> Infodex</h1>
-                <h4>NodeJS App & RESTful API</h4>
+                <h1><span>02.</span> Rock, Paper Scissors</h1>
+                <h4>JavaScript Game</h4>
             </div>
             <div data-aos="zoom-in" class="project-links">
-                <a href="https://infodex.onrender.com" target="blank">Project Website</a>
-                <a href="https://github.com/borregaio/infodex" target="blank">GitHub Page</a>
+                <a href="https://rockpaperscissors-pxx4.onrender.com" target="blank">Project Website</a>
+                <a href="https://github.com/borregaio/rockpaperscissors" target="blank">GitHub Page</a>
             </div>
         </div>
 
