--- a/project1.html
+++ b/project1.html
@@ -53,17 +53,23 @@
         <div class="project-text">
 
             <h1 data-aos="fade-up">The Goal</h1>
-            <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur dolor, nulla atque id consequuntur
-                cupiditate aut vitae accusantium optio excepturi esse omnis libero qui accusamus vero amet reiciendis
-                eligendi! Exercitationem?</p>
+            <p data-aos="fade-up">I have always been an avid Pokémon fan, and having a personal Pokédex is incredibly
+                cool. Infodex, a Node web app, utilises an open API to fetch comprehensive Pokémon information,
+                including name, type, number, and image. The front-end design, created with CSS, incorporates JavaScript
+                functionality to remove the initial div after a Pokémon search, revealing the desired information.
+                Additionally, this website is mobile-friendly.</p>
             <h1 data-aos="fade-up">The Challenges</h1>
-            <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur dolor, nulla atque id consequuntur
-                cupiditate aut vitae accusantium optio excepturi esse omnis libero qui accusamus vero amet reiciendis
-                eligendi! Exercitationem?</p>
+            <p data-aos="fade-up">The utilisation of the "fetch()" function proved to be a significantly more convenient
+                approach for acquiring the entirety of the information required by this application. By implementing
+                JavaScript to selectively remove and display divs in response to specific Pokémon search queries, the
+                code was rendered concise and efficiently organised within a single file.</p>
             <h1 data-aos="fade-up">What's Next?</h1>
-            <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur dolor, nulla atque id consequuntur
-                cupiditate aut vitae accusantium optio excepturi esse omnis libero qui accusamus vero amet reiciendis
-                eligendi! Exercitationem?</p>
+            <p data-aos="fade-up">A viable approach to expanding this project would involve incorporating additional
+                details regarding each Pokémon, encompassing information such as statistics, evolutions, and attacks.
+                Augmenting the application with a templating system, such as EJS, would provide increased versatility to
+                individual Infodex entries, while facilitating a more streamlined and refined code refactoring process.
+                This integration would enable the codebase to be structured in a more organised and efficient manner,
+                enhancing both the functionality and maintainability of the application.</p>
 
         </div>
 
@@ -78,17 +84,18 @@
 
     </section>
 
-    <!-- Script -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init({
-            delay: 200, // values from 0 to 3000, with step 50ms
-            duration: 1500, // values from 0 to 3000, with step 50ms
-            once: false, // whether animation should happen only once - while scrolling down
-            mirror: false, // whether elements should animate out while scrolling past them
-        });
-    </script>
-    <script src="script.js"></script>
+  <!-- Script -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      // delay: 200, // values from 0 to 3000, with step 50ms
+      duration: 1500, // values from 0 to 3000, with step 50ms
+      once: true, // whether animation should happen only once - while scrolling down
+      mirror: true, // whether elements should animate out while scrolling past them
+      disable: 'mobile'
+    });
+  </script>
+  <script src="script.js"></script>
 </body>
 
 </html>
