--- a/project3.html
+++ b/project3.html
@@ -53,15 +53,18 @@
         <div class="project-text">
 
             <h1 data-aos="fade-up">The Goal</h1>
-            <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur dolor, nulla atque id consequuntur
+            <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur dolor, nulla atque
+                id consequuntur
                 cupiditate aut vitae accusantium optio excepturi esse omnis libero qui accusamus vero amet reiciendis
                 eligendi! Exercitationem?</p>
             <h1 data-aos="fade-up">The Challenges</h1>
-            <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur dolor, nulla atque id consequuntur
+            <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur dolor, nulla atque
+                id consequuntur
                 cupiditate aut vitae accusantium optio excepturi esse omnis libero qui accusamus vero amet reiciendis
                 eligendi! Exercitationem?</p>
             <h1 data-aos="fade-up">What's Next?</h1>
-            <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur dolor, nulla atque id consequuntur
+            <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur dolor, nulla atque
+                id consequuntur
                 cupiditate aut vitae accusantium optio excepturi esse omnis libero qui accusamus vero amet reiciendis
                 eligendi! Exercitationem?</p>
 
@@ -82,10 +85,11 @@
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
-            delay: 200, // values from 0 to 3000, with step 50ms
+            // delay: 200, // values from 0 to 3000, with step 50ms
             duration: 1500, // values from 0 to 3000, with step 50ms
-            once: false, // whether animation should happen only once - while scrolling down
-            mirror: false, // whether elements should animate out while scrolling past them
+            once: true, // whether animation should happen only once - while scrolling down
+            mirror: true, // whether elements should animate out while scrolling past them
+            disable: 'mobile'
         });
     </script>
     <script src="script.js"></script>
