project pages text

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <h1 class="section-title">Welcome to my portfolio!</h1>
 
       <p>
-        I'm a self-taught JavaScript web developer who is constantly seeking new knowledge and growth. I am
+        My name is Carlos Borrega and I'm a self-taught JavaScript web developer who is constantly seeking new knowledge and growth. I am
         deeply passionate about my work and embrace challenges with enthusiasm. Pushing my limits and dedicating myself
         to hard work are where I truly excel.
       </p>
@@ -137,15 +137,15 @@
     <ul class="projects-list">
       <li data-aos="fade-right">
         <span>01.</span>
-        <a href="project1.html">Infodex</a>
+        <a href="infodex.html">Infodex</a>
       </li>
       <li data-aos="fade-right">
         <span>02.</span>
-        <a href="project2.html">Rock, Paper, Scissors</a>
+        <a href="jsgame.html">Rock, Paper, Scissors</a>
       </li>
       <li data-aos="fade-right">
         <span>03.</span>
-        <a href="project3.html">Portfolio</a>
+        <a href="portfolio.html">Portfolio</a>
       </li>
     </ul>
 
