--- a/infodex.html
+++ b/infodex.html
@@ -41,7 +41,7 @@
                 <h4>NodeJS App & RESTful API</h4>
             </div>
             <div data-aos="zoom-in" class="project-links">
-                <a href="https://infodex.onrender.com" target="blank">Project Website</a>
+                <a href="https://www.infodex.borrega.io/" target="blank">Project Website</a>
                 <a href="https://github.com/borregaio/infodex" target="blank">GitHub Page</a>
             </div>
         </div>
