--- a/portfolio.html
+++ b/portfolio.html
@@ -53,20 +53,21 @@
         <div class="project-text">
 
             <h1 data-aos="fade-up">The Goal</h1>
-            <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur dolor, nulla atque
-                id consequuntur
-                cupiditate aut vitae accusantium optio excepturi esse omnis libero qui accusamus vero amet reiciendis
-                eligendi! Exercitationem?</p>
+            <p data-aos="fade-up">Benjamin Wigmore, a textile designer, desired a simple portfolio website that
+                showcased his work without personal information, resembling a concise digital business card. The focus
+                was to highlight his artistic talent and craftsmanship, ensuring a minimalist user experience that
+                captivated viewers with captivating textile designs.</p>
             <h1 data-aos="fade-up">The Challenges</h1>
-            <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur dolor, nulla atque
-                id consequuntur
-                cupiditate aut vitae accusantium optio excepturi esse omnis libero qui accusamus vero amet reiciendis
-                eligendi! Exercitationem?</p>
+            <p data-aos="fade-up">EJS templates were utilized for consistent project layouts, alongside a persistent
+                sidebar. Balancing
+                the background video size ensured quick loading without compromising quality. JavaScript modals were
+                implemented for image zooming, while Bootstrap facilitated the creation of a dropdown menu for the
+                "Projects" section. These solutions improved functionality and user experience.</p>
             <h1 data-aos="fade-up">What's Next?</h1>
-            <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur dolor, nulla atque
-                id consequuntur
-                cupiditate aut vitae accusantium optio excepturi esse omnis libero qui accusamus vero amet reiciendis
-                eligendi! Exercitationem?</p>
+            <p data-aos="fade-up">In the future, expanding Ben's portfolio could involve adding sections like an "About
+                Me" and providing more information on each project, including the creative process and concept behind
+                them. Additionally, upgrading the hosting service would improve the website's loading speed, resulting
+                in a better user experience.</p>
 
         </div>
 
