--- a/jsgame.html
+++ b/jsgame.html
@@ -41,7 +41,7 @@
                 <h4>JavaScript Game</h4>
             </div>
             <div data-aos="zoom-in" class="project-links">
-                <a href="https://rockpaperscissors-pxx4.onrender.com" target="blank">Project Website</a>
+                <a href="https://www.rockpaperscissors.borrega.io/" target="blank">Project Website</a>
                 <a href="https://github.com/borregaio/rockpaperscissors" target="blank">GitHub Page</a>
             </div>
         </div>
@@ -53,17 +53,20 @@
         <div class="project-text">
 
             <h1 data-aos="fade-up">The Goal</h1>
-            <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur dolor, nulla atque id consequuntur
-                cupiditate aut vitae accusantium optio excepturi esse omnis libero qui accusamus vero amet reiciendis
-                eligendi! Exercitationem?</p>
+            <p data-aos="fade-up">Welcome to "Rock, Paper, Scissors" - a JavaScript game where you choose rock, paper,
+                or scissors, and the computer picks randomly. The result is displayed on screen, and scores are updated.
+                Enjoy the challenge and have fun!</p>
             <h1 data-aos="fade-up">The Challenges</h1>
-            <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur dolor, nulla atque id consequuntur
-                cupiditate aut vitae accusantium optio excepturi esse omnis libero qui accusamus vero amet reiciendis
-                eligendi! Exercitationem?</p>
+            <p data-aos="fade-up">Creating the "Rock, Paper, Scissors" game posed challenges in breaking down processes
+                into functions. I used an array for selections, added event listeners for player's choice, randomized
+                computer's choice, displayed both selections, and updated the score. Learning the logic and implementing
+                different functions was tough, but I discovered dataset and parseInt() for added knowledge. I'm looking
+                forward to exploring more complex games with JavaScript!</p>
             <h1 data-aos="fade-up">What's Next?</h1>
-            <p data-aos="fade-up">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur dolor, nulla atque id consequuntur
-                cupiditate aut vitae accusantium optio excepturi esse omnis libero qui accusamus vero amet reiciendis
-                eligendi! Exercitationem?</p>
+            <p data-aos="fade-up">This game serves as a simple demonstration of various JavaScript functions and DOM
+                manipulation. It showcases the possibilities of building interactive experiences. My next endeavor will
+                involve creating a more complex game, employing different logic, and implementing a wider range of
+                JavaScript functions to elevate the gaming experience further.</p>
 
         </div>
 
@@ -78,18 +81,18 @@
 
     </section>
 
-  <!-- Script -->
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>
-    AOS.init({
-      // delay: 200, // values from 0 to 3000, with step 50ms
-      duration: 1500, // values from 0 to 3000, with step 50ms
-      once: true, // whether animation should happen only once - while scrolling down
-      mirror: true, // whether elements should animate out while scrolling past them
-      disable: 'mobile'
-    });
-  </script>
-  <script src="script.js"></script>
+    <!-- Script -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init({
+            // delay: 200, // values from 0 to 3000, with step 50ms
+            duration: 1500, // values from 0 to 3000, with step 50ms
+            once: true, // whether animation should happen only once - while scrolling down
+            mirror: true, // whether elements should animate out while scrolling past them
+            disable: 'mobile'
+        });
+    </script>
+    <script src="script.js"></script>
 </body>
 
 </html>
