mobile project pages

--- a/infodex.html
+++ b/infodex.html
@@ -38,7 +38,7 @@
             <img data-aos="flip-left" src="images/infodex.jpg" alt="Rock, paper, scissors game">
             <div data-aos="zoom-in" class="project-description">
                 <h1><span>01.</span> Infodex</h1>
-                <h4>NodeJS App & RESTful API</h4>
+                <h4>NodeJS & RESTful API</h4>
             </div>
             <div data-aos="zoom-in" class="project-links">
                 <a href="https://www.infodex.borrega.io/" target="blank">Project Website</a>
