--- a/portfolio.html
+++ b/portfolio.html
@@ -38,7 +38,7 @@
             <img data-aos="flip-left" src="images/benwig.jpg" alt="Rock, paper, scissors game">
             <div data-aos="zoom-in" class="project-description">
                 <h1><span>03.</span> Portfolio</h1>
-                <h4>NodeJS App & EJS</h4>
+                <h4>NodeJS & EJS</h4>
             </div>
             <div data-aos="zoom-in" class="project-links">
                 <a href="https://benjaminwigmore.onrender.com" target="blank">Project Website</a>
